--- a/test/subproject/build.gradle
+++ b/test/subproject/build.gradle
@@ -9,7 +9,7 @@ version = '2.0.0'
 
 publishing {
     repositories {
-        centralPortalPublishing.portal(':', 'main')
+        centralPortalPublishing.portalBundle(':', 'main')
     }
     publications {
         mavenJava(MavenPublication) {
