--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
     implementation gradleApi()
     implementation 'org.apache.commons:commons-text:1.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 }
 
 gradlePlugin {
