--- a/settings.gradle
+++ b/settings.gradle
@@ -49,7 +49,8 @@ managedVersioning {
                 name.set 'publishPlugins'
                 buildCache()
                 needs.add('build')
-                gradlew 'Publish Plugins', 'publishPlugins'
+                // TODO: see https://github.com/gradle/plugin-portal-requests/issues/155
+                gradlew 'Publish Plugins', 'publishPlugins', '--no-configuration-cache'
                 tag.set('${{needs.build.outputs.version}}')
                 pluginPortal()
             }
