Disable project isolation for gradle plugin publish action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,7 +139,7 @@
                 {
                     "name": "Publish Plugins",
                     "id": "publish_plugins",
-                    "run": "./gradlew publishPlugins --no-configuration-cache",
+                    "run": "./gradlew publishPlugins --no-configuration-cache -Dorg.gradle.unsafe.isolated-projects=false",
                     "env": {
                         "BUILD_CACHE_PASSWORD": "${{ secrets.BUILD_CACHE_PASSWORD }}",
                         "BUILD_CACHE_USER": "${{ secrets.BUILD_CACHE_USER }}",
