Avoid including needless artifacts in bundle

--- a/test/no-plugin/build.gradle
+++ b/test/no-plugin/build.gradle
@@ -1,1 +1,5 @@
-// THis plugin does _not_ opt in to the publishing and should not cause issues
+plugins {
+    id 'java'
+}
+
+// This plugin does _not_ opt in to the publishing and should not cause issues
